Signed-off-by: Tobias Bachmann <bachmanntobias96@gmail.com>
	modified:   IGreeter.cs
	modified:   Properties/launchSettings.json
	modified:   RestaurantAPI.csproj
	modified:   Startup.cs
	new file:   appsettings.Development.json
	modified:   appsettings.json
	new file:   wwwroot/index.html

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-    "Greeting": "Grüss Gott!",
+    "Greeting": "Gruess Gott!",
     "ConnectionStrings": {
         "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
